[package]
name = "rustroguelike"
version = "0.1.0"
authors = ["Ny Fanilo Andrianjafy <ny.fanilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }

[workspace]
members = [ 
  "chapter-01-helloworld",
  "chapter-02-ecs",
  "chapter-03-basic-map",
  "chapter-04-interesting-map",
  "chapter-05-field-of-view",
  "chapter-06-monsters",
  "chapter-07-damage",
  "chapter-08-gui"
]
